replaced reportToCSV email boolean with enum, changed Arrays.asList to List.of where applicable, formatting to make more readeable.